<resources>
    <string name="app_name">VetApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Log In</string>
    <string name="welcomeText">Welcome. Please fill in your credentials.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="choiceText">or</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_signout">SIGNOUT</string>
    <string name="userTypeText">First things first, what is your role?</string>
    <string name="radioGroupVetChoice">Veterinarian</string>
    <string name="radioGroupClientChoice">Pet owner</string>
    <string name="registerStartText">Let\'s get started</string>
    <string name="back_register_btn">I\'ve changed my mind, go back</string>
    <string name="title_profile">Profile</string>
    <string name="pets">Your Pets</string>
    <string name="add_pet_btn">Choose an avatar for your pet</string>
    <string name="go_back_to_pets">I have enough pets for now</string>
    <string name="change_avatar_btn">Change Avatar</string>
    <string name="profile_descr">Profile photo</string>
    <string name="welcomemsg">Welcome, doctor</string>
    <string name="vet_schedule">Your appointments</string>
    <string name="pet_choice">Choose your pet in need of care</string>
    <string name="app_choice">What does your pet need?</string>
    <string name="date_choice">Pick a preferred date from the calendar</string>
    <string name="time_choice">Choose a timeslot for the appointment</string>
    <string name="go_back_to_vets">I want a different doctor</string>
    
    <string name="client_menu_pets">Pets</string>
    <string name="client_menu_vets">Vets</string>
    <string name="client_menu_chat">Chat</string>
    <string name="client_menu_settings">Settings</string>

    <string name="vet_menu_profile">Profile</string>
    <string name="vet_menu_schedule">Schedule</string>
    <string name="vet_menu_chat">Chat</string>
    <string name="vet_menu_settings">Settings</string>

    <string name="vet_card_pm_chat">Chat</string>
    <string name="vet_card_pm_schedule_appointment">Schedule appointment</string>
    <string name="vet_card_pm_details">Details</string>


</resources>