<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="add"
    android:foregroundGravity="fill"
    android:outlineAmbientShadowColor="#FFFFFF"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/userTypeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:text="@string/userTypeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="276dp"
        android:layout_height="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTypeText">

        <RadioButton
            android:id="@+id/userVetButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/radioGroupVetChoice" />

        <RadioButton
            android:id="@+id/userClientButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/radioGroupClientChoice" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextTextPersonFirstName"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="420dp"
        android:autofillHints="First Name"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:autofillHints="Last Name"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonFirstName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonFirstName" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="289dp"
        android:autofillHints="Phone Number"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/username"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="38dp"
        android:autofillHints="Username"
        android:ems="10"
        android:hint="Username"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="140dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="62dp"
        android:enabled="true"
        android:text="@string/action_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>