<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_page.client.fragments.settings.ClientSettingsFragment">

    <ImageButton
        android:id="@+id/client_name_edit_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="Edit address button"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/client_name"
        app:layout_constraintEnd_toStartOf="@+id/client_name"
        app:layout_constraintTop_toTopOf="@+id/client_name" />

    <ImageView
        android:id="@+id/client_avatar"
        android:layout_width="135dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/profile_descr"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        tools:src="@tools:sample/avatars" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_client_change_avatar"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="26dp"
        android:background="@color/white"
        android:text="@string/change_avatar_btn"
        android:textAlignment="center"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/client_avatar"
        app:layout_constraintStart_toStartOf="@+id/client_avatar"
        app:layout_constraintTop_toBottomOf="@+id/client_avatar"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Name"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_client_change_avatar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="147dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/settingsback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" >

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        android:text="@string/button_signout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.52" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
