<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_page.client.fragments.settings.ClientSettingsFragment">

    <ImageView
        android:id="@+id/vet_avatar"
        android:layout_width="134dp"
        android:layout_height="157dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="70dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/profile_descr" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_vet_change_avatar"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="95dp"
        android:layout_height="26dp"
        android:background="@color/white"
        android:text="@string/change_avatar_btn"
        android:textAlignment="center"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/vet_avatar"
        app:layout_constraintStart_toStartOf="@+id/vet_avatar"
        app:layout_constraintTop_toBottomOf="@+id/vet_avatar"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/vet_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="First Name"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/vet_avatar"
        app:layout_constraintTop_toTopOf="@+id/vet_avatar" />

    <TextView
        android:id="@+id/vet_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="Last Name"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/vet_avatar"
        app:layout_constraintTop_toBottomOf="@+id/vet_first_name" />

    <TextView
        android:id="@+id/vet_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="Username"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/vet_avatar"
        app:layout_constraintTop_toBottomOf="@+id/vet_last_name" />

    <TextView
        android:id="@+id/address_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Your clinic's address"
        app:layout_constraintStart_toStartOf="@+id/vet_avatar"
        app:layout_constraintTop_toBottomOf="@+id/btn_vet_change_avatar" />

    <ImageButton
        android:id="@+id/vet_address_edit_btn"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:contentDescription="Edit address button"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/address_desc"
        app:layout_constraintStart_toEndOf="@+id/address_desc"
        app:layout_constraintTop_toTopOf="@+id/address_desc" />

    <TextView
        android:id="@+id/vet_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Clinic Address No. 1E, floor 3, Clinic, Address CA"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/address_desc"
        app:layout_constraintTop_toBottomOf="@+id/vet_address_edit_btn" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="173dp"
        android:background="@drawable/vetpage"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="88dp"
            android:text="@string/button_signout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.52" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>